--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,50 +1,34 @@
-# buildspec.yml
-# Fichier de configuration utilisé par AWS CodeBuild
-# Il décrit les différentes étapes du pipeline (install, build, etc.)
-
-version: 0.2   # Version du format buildspec
+version: 0.2
 
 phases:
   install:
-    # Phase d’installation des dépendances et de l’environnement
     runtime-versions:
-      python: 3.8   # Version de Python utilisée pour le build
+      python: 3.8
 
     commands:
-      - echo Installing dependencies...   # Message affiché dans les logs
-      - pip install -r requirements.txt   # Installation des dépendances Python
+      - echo Installing dependencies...
+      - pip install -r requirements.txt
 
   pre_build:
-    # Phase exécutée avant le build principal
-    # Souvent utilisée pour des vérifications (lint, sécurité, variables, etc.)
     commands:
-      - echo start prebuild and end it     # Simple message (exemple)
+      - echo start prebuild and end it
 
   build:
-    # Phase principale du build
-    # Ici, on exécute les tests unitaires
     commands:
-      - echo Running unit tests with pytest...   # Message informatif
-      - pytest --junitxml=reports/results.xml \
-        --tb=short                               # Exécute les tests et génère
-                                                 # un rapport XML exploitable
+      - echo Running unit tests with pytest...
+      - pytest --junitxml=reports/results.xml --tb=short
 
   post_build:
-    # Phase exécutée après le build
-    # Utile pour le nettoyage ou les notifications
     commands:
-      - echo Build completed successfully.       # Message de fin
+      - echo Build completed successfully.
 
 artifacts:
-  # Fichiers à conserver après le build
   files:
-    - "**/*"             # Inclut tous les fichiers du projet
-  base-directory: .      # Répertoire de base des artifacts
+    - "**/*"
+  base-directory: .
 
 reports:
-  # Déclaration des rapports de tests
-  # Permet à l’outil CI (CodeBuild/Jenkins) d’afficher les résultats
   pytest_reports:
     files:
-      - "reports/results.xml"   # Fichier généré par pytest
-    discard-paths: yes          # Ne conserve pas l’arborescence complète
+      - "reports/results.xml"
+    discard-paths: yes
